# time-tracker

./: CMakeLists.txt  example  main.cpp  refs
GUI/: window.cpp  window.hpp
src/: main.cpp
src/GUI/: mainframe.cpp  mainframe.hpp
src/GUI/UI/roundedPanel/: roundedPanel.cpp  roundedPanel.hpp
src/GUI/buttonsBlock/: buttonsBlock.cpp  buttonsBlock.hpp
src/GUI/buttonsBlock/buttons/: buttons.cpp  buttons.hpp
src/GUI/historyBlock/: historyBlock.cpp  historyBlock.hpp
src/GUI/historyBlock/files/: files.cpp  files.hpp
src/GUI/settings/: settings.cpp  settings.hpp
src/GUI/timeBlock/: timeBlock.cpp  timeBlock.hpp
src/app/: timerApp.cpp  timerApp.hpp
src/assets/: resources.qrc
src/assets/animation/animatedButton/: animatedButton.cpp  animatedButton.hpp
